--- a/BancoWeb/Web.config
+++ b/BancoWeb/Web.config
@@ -40,6 +40,9 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
+  <connectionStrings>
+    <add name="BancoContext" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;       AttachDbFilename=|DataDirectory|\Banco.mdf;       Integrated Security=True" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
@@ -50,4 +53,11 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <connectionStrings>
+    <add name="BancoContext"
+    connectionString="Data Source=(LocalDB)\MSSQLLocalDB;
+          AttachDbFilename=|DataDirectory|\Banco.mdf;
+          Integrated Security=True"
+    providerName="System.Data.SqlClient"/>
+  </connectionStrings>
 </configuration>
